--- a/templates/assets/css/index.css
+++ b/templates/assets/css/index.css
@@ -13,9 +13,16 @@
   width: 100%;
   height: 100%;
   background: #da611b;
-  background: -moz-linear-gradient(left, #fa709a 0%, #fee140 100%);
-  background: -webkit-linear-gradient(left, #fa709a 0%, #fee140 100%);
-  background: linear-gradient(to right, #fa709a 0%, #fee140 100%);
+  background: -webkit-linear-gradient(
+    to right,
+    #16bffd,
+    #cb3066
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #16bffd,
+    #cb3066
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6819e8', endColorstr='#6980f2', GradientType=1 );
 }
 .jumbotron.jumbotron-main hr {
@@ -134,4 +141,8 @@ body {
 
 .form-control {
   direction: rtl;
+}
+
+#results {
+  font-size: 2.5em;
 }
