--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
                         <br>
                         <hr style="border-top:1px;color:rgba(255,255,255,0.9);width:60%;margin:0px;margin-top:-50px;margin-bottom:10px;margin-left:20%;">
                         <p></p>
-                        <p><a class="btn btn-success" role="button" href="https://github.com/ashraq1455/DhivehiNewsClassifier" target="_blank">ގިޓްހަބް</a></p>
+                        <p><a class="btn btn-info" role="button" href="https://github.com/ashraq1455/DhivehiNewsClassifier" target="_blank">ގިޓްހަބް</a></p>
                     </div>
                 </div>
             </div>
@@ -49,13 +49,12 @@
                     </div>
                 </div>
             </div>
-            <button class="btn btn-success btn-block" id="generate-button">ކެޓެގަރީއަށް ލާ؟</button>
+            <button class="btn btn-info btn-block" id="generate-button">ކެޓެގަރީއަށް ލާ؟</button>
 
             <div class="card mt-3">
                 <div class="card-body">
-                    <h4 class="card-title">ނަތީޖާ</h4>
-                    <ul id="results">
-                    </ul>
+                    <p id="results" class="text-center text-success">
+                    </p>
                 </div>
             </div>
         </div>
