- change height, wording

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
             <div class="container center-vertically-holder" style="margin-top:-20px;">
                 <div class="row center-vertically">
                     <div class="col-md-12 offset-sm-0 text-center" style="margin-top:30px;margin-bottom:100px;">
-                        <h1>ދިވެހި ހަބަރު </h1>
+                        <h1>ދިވެހި ޚަބަރު ކްލެސިފަޔާ </h1>
                         <br>
                         <br>
                         <hr style="border-top:1px;color:rgba(255,255,255,0.9);width:60%;margin:0px;margin-top:-50px;margin-bottom:10px;margin-left:20%;">
@@ -42,7 +42,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="form-group">
-                        <label for="type">ހަބަރުގެ ބައެއް ތިރީގައި ލިޔެލާ</label>
+                        <label for="type" class="text-label">ޚަބަރުގެ ބައެއް ލިޔެލާ! ނޯޓް: ގިނައިން ލިޔުނު ވަރަކަށް ނަތީޖާ ރަނގަޅުވާނެ!</label>
                         <div class="form-group">
                             <textarea class="form-control" id="news" rows="3"></textarea>
                         </div>
