--- a/templates/index.html
+++ b/templates/index.html
@@ -42,11 +42,11 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="form-group">
-                        <label for="type" class="text-label">!ޚަބަރުގެ ބައެއް ލިޔެލާ</label>
+                        <label for="type" class="text-label">:ޚަބަރުގެ ބައެއް ލިޔެލާ</label>
                         <div class="form-group">
                             <textarea class="form-control" id="news" rows="3"></textarea>
                         </div>
-                        <label class="text-label">ނޯޓް:ގިނައިން ލިޔުނު ވަރަކަށް ނަތީޖާ ރަނގަޅުވާ</label>
+                        <label class="note">ނޯޓް:ގިނައިން ލިޔުނު ވަރަކަށް ނަތީޖާ ރަނގަޅުވާނެ</label>
                     </div>
                 </div>
             </div>
