--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
         <footer class="footer mt-auto py-3">
             <div class="container text-center">
                 <span class="text-muted">ބައިވަރުގެ އުފެއްދުމެއް 2021</span> | <a
-                    href="https://github.com/ashraq1455/DhivehiNewsClassifier">ގިޓްހަބް</a> | <a href="/api">އޭޕީއަިއި</a>
+                    href="https://github.com/baivaru/DhivehiNewsClassifier-http">ގިޓްހަބް</a> | <a href="https://github.com/ashraq1455/DhivehiNewsClassifier">ކްލެސިފަޔާ</a>
             </div>
         </footer>
         
