--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
                         <br>
                         <hr style="border-top:1px;color:rgba(255,255,255,0.9);width:60%;margin:0px;margin-top:-50px;margin-bottom:10px;margin-left:20%;">
                         <p></p>
-                        <p><a class="btn btn-info" role="button" href="https://github.com/ashraq1455/DhivehiNewsClassifier" target="_blank">ގިޓްހަބް</a></p>
+                        <p><a class="btn btn-info" role="button" href="https://github.com/ashraq1455/DhivehiNewsClassifier" target="_blank">އަސްލު</a></p>
                     </div>
                 </div>
             </div>
@@ -62,8 +62,8 @@
 
         <footer class="footer mt-auto py-3">
             <div class="container text-center">
-                <span class="text-muted">ބައިވަރުގެ އުފެއްދުމެއް 2021</span> | <a
-                    href="https://github.com/baivaru/DhivehiNewsClassifier-http">ގިޓްހަބް</a> | <a href="https://github.com/ashraq1455/DhivehiNewsClassifier">ކްލެސިފަޔާ</a>
+                <span class="text-muted">ބައިވަރުގެ އުފެއްދުމެއް 2021</span> | 
+                <a href="https://github.com/baivaru/DhivehiNewsClassifier-http">ގިޓްހަބް</a> | <a href="https://baiva.ru/mv-news-classifier-model"></a>މޮޑެލް</a> | <a href="https://baiva.ru/mv-news-classifier-dataset"></a>ޑޭޓާސެޓް</a> 
             </div>
         </footer>
         
