--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
         <footer class="footer mt-auto py-3">
             <div class="container text-center">
                 <span class="text-muted">ބައިވަރުގެ އުފެއްދުމެއް 2021</span> | 
-                <a href="https://github.com/baivaru/DhivehiNewsClassifier-http">ގިޓްހަބް</a> | <a href="https://baiva.ru/mv-news-classifier-model"></a>މޮޑެލް</a> | <a href="https://baiva.ru/mv-news-classifier-dataset"></a>ޑޭޓާސެޓް</a> 
+                <a href="https://github.com/baivaru/DhivehiNewsClassifier-http">ގިޓްހަބް</a> | <a href="https://baiva.ru/mv-news-classifier-model">މޮޑެލް</a> | <a href="https://baiva.ru/mv-news-classifier-dataset">ޑޭޓާސެޓް</a> 
             </div>
         </footer>
         
